styles/MenuBar.module.css
.container {
    --container_height: 45px;
    width: 100%;
    height: var(--container_height);
    padding-left: 5px;
    padding-right: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #fff;
}

.pages {
    display: flex;
    flex-direction: row;
    align-items: center;
    color: #000;
}

.pages :not(:last-child)::after {
    content: '/';
    color: #a0a0a094;
    font-weight: 500;
    font-family: sans-serif;
    margin-left: 0.5em;
    margin-right: 0.5em;
}

.page {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    cursor: pointer;
}

.page_content:hover {
    background: #d0d0d09c;
}

.page_content {
    display: flex;
    flex-direction: row;
    gap: 5px;
    align-items: center;
    font-size: 14px;
    font-family: sans-serif;
    color: rgb(55, 53, 47);
    border-radius: calc(0.5em - 4px);
    padding: 0.5em;
}

.page_icon {
    max-width: 16px;
    max-height: 16px;
    display: flex;
    align-items: center;
}

.page_icon svg,
.page_icon img {
    width: 16px;
    height: 16px;
    display: flex;
    align-items: center;
}

/*Options*/

.options {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    position: relative;
}

.optionButton {
    display: flex;
    align-items: center;
    justify-content: center;
    background: none;
    border: none;
    color: #424242;
    cursor: pointer;
    padding: 5px;
    border-radius: calc(0.5rem - 4px);
    position: relative;
    height: 30px;
    width: 30px;
}

.optionButton:hover {
    background: #d0d0d09c;
}

.optionButton svg {
    width: 18px;
    height: 18px;
}

